--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "customer_service_system",
+    "name": "story_upload",
     "version": "0.1.0",
     "private": true,
     "scripts": {
