--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dependencies": {
         "axios": "^0.19.0",
         "core-js": "^3.3.2",
+        "install": "^0.13.0",
+        "npm": "^6.14.4",
         "vue": "^2.6.10",
         "vue-router": "^3.1.6"
     },
@@ -19,7 +21,7 @@
         "@vue/cli-service": "^4.0.0",
         "babel-eslint": "^10.0.3",
         "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
+        "eslint-plugin-vue": "^5.2.3",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.0",
         "sass-resources-loader": "^2.0.1",
