--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "install": "^0.13.0",
         "npm": "^6.14.4",
         "vue": "^2.6.10",
-        "vue-router": "^3.1.6"
+        "vue-router": "^3.1.6",
+        "vuex": "^3.3.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.0.0",
