--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "install": "^0.13.0",
         "npm": "^6.14.4",
         "vue": "^2.6.10",
+        "vue-moment": "^4.1.0",
         "vue-router": "^3.1.6",
         "vuex": "^3.3.0"
     },
